# Sapphire

./: .gitignore  CMakeLists.txt
src/common/: CMakeLists.txt
src/servers/: CMakeLists.txt
src/servers/Common/: CMakeLists.txt
src/servers/Common/Database/: DatabaseDef.h  DbConnection.cpp  DbConnection.h  DbLoader.cpp  DbWorker.cpp  DbWorker.h  DbWorkerPool.cpp  DbWorkerPool.h
src/servers/Common/Network/: Acceptor.cpp  Acceptor.h  Connection.h  GamePacket.cpp  GamePacket.h  GamePacketParser.cpp  PacketContainer.cpp  PacketContainer.h
src/servers/Common/Util/: UtilMath.h
src/servers/Sapphire_Lobby/: CMakeLists.txt  GameConnection.cpp  GameConnection.h  LobbyPacketContainer.cpp  LobbyPacketContainer.h  RestConnector.cpp  ServerLobby.cpp  ServerLobby.h
src/servers/Sapphire_REST/: CMakeLists.txt  PlayerMinimal.cpp  SapphireAPI.cpp  main.cpp
src/servers/Sapphire_Zone/: CMakeLists.txt  ServerZone.cpp  ServerZone.h  Session.cpp
src/servers/Sapphire_Zone/Action/: Action.cpp  Action.h  ActionCast.cpp  ActionCast.h  ActionCollision.cpp  ActionCollision.h  ActionMount.cpp  ActionMount.h  ActionTeleport.cpp  ActionTeleport.h  EventAction.cpp  EventAction.h  EventItemAction.cpp  EventItemAction.h
src/servers/Sapphire_Zone/Actor/: Actor.cpp  Actor.h  BattleNpc.cpp  Player.cpp  Player.h  PlayerEvent.cpp  PlayerInventory.cpp  PlayerQuest.cpp  PlayerSql.cpp
src/servers/Sapphire_Zone/DebugCommand/: DebugCommand.h  DebugCommandHandler.cpp  DebugCommandHandler.h
src/servers/Sapphire_Zone/Event/: EventHelper.cpp
src/servers/Sapphire_Zone/Inventory/: Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemContainer.cpp  ItemContainer.h
src/servers/Sapphire_Zone/Linkshell/: Linkshell.h  LinkshellMgr.cpp
src/servers/Sapphire_Zone/Math/: CalcBattle.cpp  CalcBattle.h  CalcStats.cpp  CalcStats.h
src/servers/Sapphire_Zone/Network/: GameConnection.cpp  GameConnection.h
src/servers/Sapphire_Zone/Network/Handlers/: ActionHandler.cpp  CFHandlers.cpp  EventHandlers.cpp  GMCommandHandlers.cpp  InventoryHandler.cpp  PacketHandlers.cpp  SkillHandler.cpp
src/servers/Sapphire_Zone/Script/: ScriptManager.cpp  ScriptManager.h  ScriptManagerInit.cpp
src/servers/Sapphire_Zone/StatusEffect/: StatusEffect.cpp  StatusEffect.h  StatusEffectContainer.cpp  StatusEffectContainer.h
src/servers/Sapphire_Zone/Zone/: Cell.cpp  Cell.h  Zone.cpp  Zone.h  ZoneMgr.cpp  ZoneMgr.h  ZonePosition.h
src/servers/Server_Common/: Common.h  CommonGen.cpp
src/servers/Server_Common/Config/: XMLConfig.h
src/servers/Server_Common/Crypt/: md5.h
src/servers/Server_Common/Database/: DbLoader.h  PreparedStatement.h
src/servers/Server_Common/Network/: GamePacket.h  GamePacketNew.h
src/servers/Server_Common/Network/PacketDef/: Ipcs.h
src/servers/Server_Common/Util/: Util.h
src/servers/Server_Lobby/: LobbySession.h
src/servers/Server_REST/: LoginSession.h  PlayerMinimal.h  Session.h
src/servers/Server_Zone/: CMakeLists.txt  ServerZone.cpp
src/servers/Server_Zone/Action/: ActionCast.cpp
src/servers/Server_Zone/Actor/: Actor.h  BattleNpc.cpp  BattleNpcTemplate.h  Player.cpp  Player.h  PlayerInventory.cpp
src/servers/Server_Zone/DebugCommand/: DebugCommandHandler.cpp
src/servers/Server_Zone/Event/: EventHelper.h
src/servers/Server_Zone/Inventory/: Inventory.cpp
src/servers/Server_Zone/Network/: GameConnection.cpp
src/servers/Server_Zone/Party/: Party.h  PartyMgr.h
src/servers/Server_Zone/Social/: Group.cpp  Group.h  GroupMgr.h
src/servers/Server_Zone/Zone/: Cell.h
(+66 files in other folders)
